--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -536,10 +536,7 @@ The bedroom that could fit the water tank inside of it maybe,
 &lt;/span&gt;</tw-passagedata><tw-passagedata pid="16" name="messy table" tags="backgroundimage3" position="300,1125" size="100,100"> &lt;script&gt;
   // Array of images to display (add as many as you want)
   var images = [
-    &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;mum.jpg&quot;, &quot;cousins.jpg&quot;, &quot;postcard.jpg&quot;, 
-    &quot;farm.jpg&quot;, &quot;cross.jpg&quot;, &quot;mountains1.jpg&quot;, &quot;jesus1.jpg&quot;, &quot;stairs.jpg&quot;, 
-    &quot;italy.jpg&quot;, &quot;procession1.jpg&quot;, &quot;nonni.jpg&quot;, &quot;zio.jpg&quot;, &quot;mountain2.jpg&quot;,
-    &quot;leaf1.jpg&quot;, &quot;leaf2.jpg&quot;, &quot;maria.jpg&quot;, &quot;jesus2.jpg&quot;, &quot;church1.jpg&quot;
+    &quot;letter.jpg&quot;, &quot;family.jpg&quot;, &quot;mum.jpg&quot;,  &quot;nonnocitizenship.jpg&quot;, &quot;cousins.jpg&quot;, &quot;postcard.jpg&quot;, &quot;farm.jpg&quot;, &quot;marriagecertificate.jpg&quot;, &quot;cross.jpg&quot;, &quot;mountains1.jpg&quot;, &quot;jesus1.jpg&quot;, &quot;stairs.jpg&quot;, &quot;mumbirthcertificate.jpg&quot;, &quot;italy.jpg&quot;, &quot;procession1.jpg&quot;, &quot;nonni.jpg&quot;, &quot;zio.jpg&quot;, &quot;mountain2.jpg&quot;, &quot;leaf1.jpg&quot;, &quot;leaf2.jpg&quot;, &quot;maria.jpg&quot;, &quot;jesus2.jpg&quot;, &quot;church1.jpg&quot;, &quot;nonnomilitary.jpg&quot;
   ];
 
   var currentIndex = 0;
