--- a/The Tank/thetank.html
+++ b/The Tank/thetank.html
@@ -333,9 +333,21 @@ tw-story[tags~="background2"] {
   text-decoration: underline !important;  /* Underline on hover */
 }
 
+/* Apply background image to the entire body */
 tw-story[tags~="background3"] {
-  background: url('images/tablecloth.jpg') center center / cover no-repeat fixed !important;
-  background-color: #EEEDEB; /* Fallback background color */
+  background-image: url('images/tablecloth.jpg'); /* Change to your background image */
+  background-size: cover;  /* Ensures the image covers the entire screen */
+  background-position: center center;  /* Centers the image */
+  background-attachment: fixed;  /* Keeps the background fixed during scroll */
+  height: 100vh;  /* Ensures the background covers the full height of the viewport */
+  width: 100vw;  /* Ensures the background covers the full width of the viewport */
+  position: relative; /* Allows other elements to layer on top */
+}
+
+/* Optional: Adjust text color and spacing on top of background */
+tw-story {
+  color: white; /* Adjust text color for contrast */
+  padding: 20px;
 }
 
 .scrap-img {
